--- a/gitub.html
+++ b/gitub.html
@@ -11,18 +11,49 @@
    <tr>
       <td width="50%" bgcolor="#000000"><font color="#FFFFFF">Commande</font></td>
       <td width="50%" bgcolor="#000000"><font color="#FFFFFF">Description</font></td> 
-      </div>
-         </tr>
-   <tr>
-      <td width="50%"></td>
-      <td width="50%"></td>
    </tr>
+
    <tr>
-      <td width="50%"></td>
-      <td width="50%"></td>
+      <td>$ git status</td>
+      <td>Liste les nouveaux fichiers et les fichiers modifiés à committer</td>
    </tr>
+
    <tr>
-      <td width="50%"></td>
-      <td width="50%"></td>
+      <td>$ git diff</td>
+      <td>Montre les modifications de fichier qui ne sont pas encore indexées</td>
    </tr>
-</table> 
+
+   <tr>
+      <td>$ git add [fichier]</td>
+      <td>Ajoute un instantané du fichier en préparation pour le suivi de version</td>
+   </tr>
+
+   <tr>
+      <td>$ git commit -m "[message descriptif]"</td>
+      <td>Enregistre un instantané des fichiers dans l’historique des versions</td>
+   </tr>
+
+   <tr>
+      <td>$ git branch</td>
+      <td>Liste toutes les branches locales dans le dépôt courant</td>
+   </tr>
+
+   <tr>
+      <td>$ git checkout [nom-de-branche]</td>
+      <td>Bascule sur la branche spécifiée et met à jour le répertoire de travail</td>
+   </tr>
+
+   <tr>
+      <td>$ git merge [nom-de-branche]</td>
+      <td>Combine dans la branche courante l’historique de la branche spécifiée</td>
+   </tr>
+
+   <tr>
+      <td>$ git clone [url]</td>
+      <td>Télécharge un projet et tout son historique de versions</td>
+   </tr>
+</table>
+</div>
+
+</body>
+</html>
